--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
    <header>
     <div class="header-mobile">
-        <h1>Filmes em Alta</h1>
+        <h1>Filmes & Noticias</h1>
         <img class="icone-menu" src="./image/menu.svg" alt="menu">
         </div>
 
        <div class="menu-mobile">
       <nav>
         <a href="index.html">Inicío</a>
-        <a href="pagina-filmes.html">Filmes</a>
+        <a href="pagfilmes.html">Filmes</a>
         <a href="pagseries.html">Séries</a>
         <a href="lança.html">Lançamentos</a>
         <a href="contato.html">Contato</a>
