--- a/pagfilmes.html
+++ b/pagfilmes.html
@@ -18,7 +18,7 @@
        <div class="menu-mobile">
       <nav>
         <a href="index.html">Inicío</a>
-        <a href="pagina-filmes.html">Filmes</a>
+        <a href="pagfilmes.html">Filmes</a>
         <a href="pagseries.html">Séries</a>
         <a href="lança.html">Lançamentos</a>
         <a href="contato.html">Contato</a>
