--- a/pagseries.html
+++ b/pagseries.html
@@ -10,21 +10,21 @@
 </head>
 <body>
     
-    <header>
-        <div class="header-mobile">
+     <header>
+    <div class="header-mobile">
         <h1>Series em Alta</h1>
-         <img class="icone-menu" src="./image/menu.svg" alt="Menu">
+        <img class="icone-menu" src="./image/menu.svg" alt="menu">
         </div>
 
-        <div>
-            <nav class="menu-mobile">
-            <a href="index.html">Inicio</a>
-            <a href="pagfilmes.html">Filmes</a>
-            <a href="pagseries.html">Series</a>
-            <a href="lança.html">Lançamento</a>
-            <a href="contato.html">Contato</a>
-        </nav>
-        </div>
+       <div class="menu-mobile">
+      <nav>
+        <a href="index.html">Inicío</a>
+        <a href="pagfilmes.html">Filmes</a>
+        <a href="pagseries.html">Séries</a>
+        <a href="lança.html">Lançamentos</a>
+        <a href="contato.html">Contato</a>
+      </nav>
+    </div>
 
         <nav>
             <a href="index.html">Inicio</a>
